test/neg/neg-serial11.errc
Template argument of read must be Serializable.
